force-app/main/default/objects/Account/fields/Legal_Entity_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Descriptor__c</fullName>
    <description>Legal Entity types</description>
    <inlineHelpText>Used to populate output forms</inlineHelpText>
    <label>Entity Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>an Individual</fullName>
            </value>
            <value>
                <fullName>a Corporation</fullName>
            </value>
            <value>
                <fullName>a California Corporation</fullName>
            </value>
            <value>
                <fullName>a California Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>a Foreign Corporation</fullName>
            </value>
            <value>
                <fullName>a Foreign Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>a General Partnership</fullName>
            </value>
            <value>
                <fullName>a Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>a Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>a Limited Partnership</fullName>
            </value>
            <value>
                <fullName>a Registered Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>a Joint Venture</fullName>
            </value>
            <value>
                <fullName>an Unincorporated Association</fullName>
            </value>
            <value>
                <fullName>a Professional Corporation</fullName>
            </value>
            <value>
                <fullName>a Professional Law Corporation</fullName>
            </value>
            <value>
                <fullName>a Political Subdivision of the State of California</fullName>
            </value>
            <value>
                <fullName>a Trust</fullName>
            </value>
            <value>
                <fullName>a Business Trust</fullName>
            </value>
            <value>
                <fullName>A nonprofit organization</fullName>
            </value>
            <value>
                <fullName>A public entity</fullName>
            </value>
            <value>
                <fullName>a Delaware Corporation</fullName>
            </value>
            <value>
                <fullName>a Delaware Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>a California Nonprofit Corporation</fullName>
            </value>
            <value>
                <fullName>a California Limited Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>