force-app/main/default/objects/Account/fields/Liable_Party_Output_Conga__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Output_Conga__c</fullName>
    <formula>IF ( Entity_Type_Other__c = "", IF ( Name = "", PersonContact.FirstName + IF (PersonContact.MiddleName ="",""," " + PersonContact.MiddleName) + " " + PersonContact.LastName, Name) + ", " + TEXT ( Legal_Entity_Descriptor__c ), IF ( Name = "", PersonContact.FirstName + IF ( PersonContact.MiddleName ="",""," " + PersonContact.MiddleName) + " " + PersonContact.LastName, Name) + ", " + Entity_Type_Other__c )+ IF (ISBLANK ( AKA_Alias_or_other_special_circumstance__pc ), "" , ", a.k.a. " + AKA_Alias_or_other_special_circumstance__pc )</formula>
    <label>Liable Party Output - Conga</label>
    <type>Text</type>
</CustomField>