force-app/main/default/objects/Account/fields/Low_wage_Industry__c.field-meta.xml
<CustomField>
    <fullName>Low_wage_Industry__c</fullName>
    <label>Low-wage Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>