force-app/main/default/objects/Account/fields/Low_wage_Industry_Selection__c.field-meta.xml
<CustomField>
    <fullName>Low_wage_Industry_Selection__c</fullName>
    <label>Low-wage Industry Selection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Low_wage_Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Residential Care Home</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Security Guard</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Nail Salon</fullName>
            </value>
            <value>
                <fullName>Res Care</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>