force-app/main/default/objects/Account/fields/Main_Workers_Classification__c.field-meta.xml
<CustomField>
    <fullName>Main_Workers_Classification__c</fullName>
    <label>Main Workers' Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>