force-app/main/default/objects/Account/fields/Mark_as_duplicate__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field triggers demand tools to merge the accounts</description>
    <inlineHelpText>If this account is a duplicate of another account, check this box and lookup the account to merge this account in to in the "Merge into Account" field.</inlineHelpText>
    <label>Mark as duplicate</label>
    <type>Checkbox</type>
</CustomField>