force-app/main/default/objects/Account/fields/Master_Record_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Indicator__c</fullName>
    <formula>IF ( (NOT(ISNULL( Merge_Into_Account__c )) &amp;&amp;  Mark_as_duplicate__c = true) , 0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Record Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>