force-app/main/default/objects/Account/fields/Merge_Into_Account__c.field-meta.xml
<CustomField>
    <fullName>Merge_Into_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the account that this account will be merged into when demand tools runs</description>
    <inlineHelpText>Select the "master" account that this account should be merged into. You must complete this field when selecting "Mark as Duplicate"</inlineHelpText>
    <label>Merge Into Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>