force-app/main/default/objects/Account/fields/NAICS_Code_Title__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Title__c</fullName>
    <description>This field is used to display the Title of the NAICS Code associated with the Account</description>
    <formula>NAICS_Code__r.NAICS_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Code Title</label>
    <type>Text</type>
</CustomField>