force-app/main/default/objects/Account/fields/Name_UsedInTemplates__c.field-meta.xml
<CustomField>
    <fullName>Name_UsedInTemplates__c</fullName>
    <formula>IF(IsPersonAccount,  FirstName &amp; " " &amp; IF (ISBLANK(MiddleName), LastName, MiddleName &amp; " " &amp; LastName), Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name_UsedInTemplates</label>
    <type>Text</type>
</CustomField>