force-app/main/default/objects/Account/fields/Not_in_good_standing_explanation__c.field-meta.xml
<CustomField>
    <fullName>Not_in_good_standing_explanation__c</fullName>
    <description>If your corporation or LLC is not in good standing with the California Secretary of State, please explain.</description>
    <label>Not in good standing explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>