force-app/main/default/objects/Account/fields/Number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees__c</fullName>
    <label>Number of employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-200</fullName>
            </value>
            <value>
                <fullName>200+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>