force-app/main/default/objects/Account/fields/Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Code__c</fullName>
    <label>Office Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>