force-app/main/default/objects/Account/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Ownership__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Ownership</relationshipName>
    <type>Lookup</type>
</CustomField>