force-app/main/default/objects/Account/fields/Pay_Day__c.field-meta.xml
<CustomField>
    <fullName>Pay_Day__c</fullName>
    <label>Pay Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>