force-app/main/default/objects/Account/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <description>Custom Telephone Field</description>
    <inlineHelpText>Custom Telephone Field</inlineHelpText>
    <label>Phone 1</label>
    <type>Phone</type>
</CustomField>