force-app/main/default/objects/Account/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <description>Custom Telephone Field</description>
    <inlineHelpText>Custom Telephone Field</inlineHelpText>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>