force-app/main/default/objects/Account/fields/Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_Ext__c</fullName>
    <label>Phone Ext</label>
    <length>5</length>
    <type>Text</type>
</CustomField>