force-app/main/default/objects/Account/fields/Physical_Business_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Address_Line_1__c</fullName>
    <label>Physical Business Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>