force-app/main/default/objects/Account/fields/Physical_Business_City_Province__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_City_Province__c</fullName>
    <label>Physical Business City / Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>