force-app/main/default/objects/Account/fields/Physical_Business_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Postal_Code__c</fullName>
    <label>Physical Business Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>