force-app/main/default/objects/Account/fields/Primary_City_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Primary_City_Placeholder__c</fullName>
    <description>Hidden Field to update Primary Address if Account is new. Used on form assembly submissions.</description>
    <inlineHelpText>Hidden Field to update Primary Address if Account is new. Used on form assembly submissions.</inlineHelpText>
    <label>Primary City Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>