force-app/main/default/objects/Account/fields/Primary_Street_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Street_Placeholder__c</fullName>
    <description>Hidden Placeholder for Primary Street to update on new form assembly submissions.</description>
    <inlineHelpText>Hidden Placeholder for Primary Street to update on new form assembly submissions.</inlineHelpText>
    <label>Primary Street Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>