force-app/main/default/objects/Account/fields/Primary_Zip_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Zip_Placeholder__c</fullName>
    <description>Hidden Placeholder for Primary Zip to update on new form assembly submissions.</description>
    <inlineHelpText>Hidden Placeholder for Primary Zip to update on new form assembly submissions.</inlineHelpText>
    <label>Primary Zip Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>