force-app/main/default/objects/Account/fields/Registration_Account__c.field-meta.xml
<CustomField>
    <fullName>Registration_Account__c</fullName>
    <label>Registration Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>