force-app/main/default/objects/Account/fields/Relationship_to_Employer__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Employer__c</fullName>
    <label>Relationship to Employer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>