force-app/main/default/objects/Account/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <formula>IF( RecordType.Name = 'Person Account', PersonEmail, Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signer Email</label>
    <type>Text</type>
</CustomField>