force-app/main/default/objects/Account/fields/State_Employer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Employer_Identification_Number__c</fullName>
    <inlineHelpText>Please enter your 8-digit SEIN number using only numbers (no dashes or spaces.)</inlineHelpText>
    <label>State Employer Identification Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>