force-app/main/default/objects/Account/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <inlineHelpText>In what U.S. state was your Corporation or LLC incorporated?</inlineHelpText>
    <label>State of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>