force-app/main/default/objects/Account/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>