force-app/main/default/objects/Account/fields/Subject_to_Lien__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cashiering Project - F-0515</description>
    <label>Subject to Lien</label>
    <type>Checkbox</type>
</CustomField>