force-app/main/default/objects/Account/fields/Text_Message_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Text_Message_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Message Opt Out</label>
    <type>Checkbox</type>
</CustomField>