force-app/main/default/objects/Account/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <inlineHelpText>From Form 1</inlineHelpText>
    <label>Type of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>