force-app/main/default/objects/Account/fields/Type_of_Car_Wash__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Car_Wash__c</fullName>
    <label>Type of Car Wash</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Standing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>