force-app/main/default/objects/Account/fields/Vehicle_License_Plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_License_Plate__c</fullName>
    <label>Vehicle License Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>