force-app/main/default/objects/Account/fields/VNO_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>VNO_Last_Modified_By__c</fullName>
    <description>for VNO clean up</description>
    <label>VNO Last Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>