force-app/main/default/objects/Account/fields/Wage_Cases_Previous_6_months__c.field-meta.xml
<CustomField>
    <fullName>Wage_Cases_Previous_6_months__c</fullName>
    <description>Count of wage cases docketed in the previous 6 months. Used for determining potential accounts for BOFE investigations</description>
    <label>Wage Cases Previous 6 months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>