force-app/main/default/objects/Account/fields/WageClaimId__c.field-meta.xml
<CustomField>
    <fullName>WageClaimId__c</fullName>
    <externalId>true</externalId>
    <label>WageClaimId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>