force-app/main/default/objects/Account/fields/WCI_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>WCI_Expiration_Date__c</fullName>
    <description>WCI Expiration Date</description>
    <inlineHelpText>WCI Expiration Date</inlineHelpText>
    <label>WCI Expiration Date</label>
    <type>Date</type>
</CustomField>