force-app/main/default/objects/Account/fields/X2810_4_Prior_Offender__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_Prior_Offender__c</fullName>
    <label>2810.4 Prior Offender</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>