force-app/main/default/objects/Account/fields/ZIP_PostalCode1__c.field-meta.xml
<CustomField>
    <fullName>ZIP_PostalCode1__c</fullName>
    <label>ZIP/PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>