force-app/main/default/objects/Account/recordTypes/Agent_for_Service.recordType-meta.xml
<RecordType>
    <fullName>Agent_for_Service</fullName>
    <active>true</active>
    <label>Agent for Service</label>
</RecordType>