force-app/main/default/objects/Account/recordTypes/City_Business_License.recordType-meta.xml
<RecordType>
    <fullName>City_Business_License</fullName>
    <active>true</active>
    <label>City Business License</label>
</RecordType>