force-app/main/default/objects/Account/recordTypes/County_Registrar.recordType-meta.xml
<RecordType>
    <fullName>County_Registrar</fullName>
    <active>true</active>
    <label>County Registrar</label>
</RecordType>