force-app/main/default/objects/Account/recordTypes/Court.recordType-meta.xml
<RecordType>
    <fullName>Court</fullName>
    <active>true</active>
    <label>Court</label>
</RecordType>