force-app/main/default/objects/Account/recordTypes/Defendant_Business.recordType-meta.xml
<RecordType>
    <fullName>Defendant_Business</fullName>
    <active>true</active>
    <label>Defendant Business</label>
</RecordType>