force-app/main/default/objects/Account/recordTypes/Law_Firm.recordType-meta.xml
<RecordType>
    <fullName>Law_Firm</fullName>
    <active>false</active>
    <description>Deactivated per SR-010542</description>
    <label>Law Firm</label>
</RecordType>