force-app/main/default/objects/Account/validationRules/Bankruptcy_Status_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Bankruptcy_Status_Date</fullName>
    <active>true</active>
    <description>Cashiering Validation Rule - If Bankruptcy Status IS NOT NULL then Bankruptcy Date is required</description>
    <errorConditionFormula>!ISPICKVAL ( Bankruptcy_Status__c , 'None')
&amp;&amp;
!ISPICKVAL ( Bankruptcy_Status__c, '' )
&amp;&amp; 
ISBLANK ( Bankruptcy_Status_Date__c )</errorConditionFormula>
    <errorDisplayField>Bankruptcy_Status_Date__c</errorDisplayField>
    <errorMessage>You must enter bankruptcy status date</errorMessage>
</ValidationRule>