force-app/main/default/objects/Account/validationRules/Master_account_can_not_be_duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Master_account_can_not_be_duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(UPPER(Action__c) , 'MASTER') &amp;&amp;  Mark_as_duplicate__c</errorConditionFormula>
    <errorMessage>This is a Master Account, you may not mark this as a duplicate.</errorMessage>
</ValidationRule>