force-app/main/default/objects/Account/validationRules/Req_Other_Entity.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Other_Entity</fullName>
    <active>false</active>
    <description>Require an other entity description when other type is selected.</description>
    <errorConditionFormula>ISPICKVAL (  Entity_Type__c , 'Other' )
&amp;&amp; ISBLANK ( Entity_Type_Other__c )</errorConditionFormula>
    <errorDisplayField>Entity_Type_Other__c</errorDisplayField>
    <errorMessage>When selecting "Other" for entity type, please enter a description in the Entity Type Other field.</errorMessage>
</ValidationRule>