force-app/main/default/objects/Account/listViews/Accounts_With_Record_Types.listView-meta.xml
<ListView>
    <fullName>Accounts_With_Record_Types</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>JJ</value>
    </filters>
    <label>Accounts With Record Types</label>
</ListView>